--- a/_config.yml
+++ b/_config.yml
@@ -131,9 +131,9 @@ url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
 
 # Staticman support
 staticman:
-  repository : "keniris/log"
+  repository : 
   # GitHub username/repository eg. "daattali/beautiful-jekyll"
-  branch     : master
+  branch     : 
   # eg. "master" If you're not using `master` branch, then you also need to update the `branch` parameter in `staticman.yml`
   endpoint   : # URL of your own deployment (with trailing slash) (will fallback to a public GitLab instance)
   reCaptcha:
