--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (https://username.github.io) then use these settings:
-url: "http://keniris.github.io/jplog"
-baseurl: "/jplog"
+url: "http://keniris.github.io/pglog"
+baseurl: "/pglog"
 
 # If you are building a GitHub project page then use these settings:
 #url: "http://username.github.io/projectname"
@@ -28,7 +28,7 @@ navbar-links:
     - HAHA~哈狗幫!: "http://keniris.pixnet.net/blog"
     - Learn markdown: "http://www.markdowntutorial.com/"
     - GitHub Pages: "https://pages.github.com/"
-  Author's home: "http://keniris.github.io/jplog"
+  Author's home: "http://keniris.github.io/pglog"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
